--- a/cart-dev.yml
+++ b/cart-dev.yml
@@ -6,3 +6,34 @@ spring:
     port: 5672
     username: root
     password: EMXT5201314WTXS!
+  #数据库相关配置
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    platform: mysql
+    url: jdbc:mysql://localhost:3306/shopping?useUnicode=true&characterEncoding=utf8&serverTimazone=Asia/Shanghai
+    username: root
+    password: 520258
+    druid:
+      #初始化大小
+      initialSize: 5
+      #最小值
+      minIdle: 1
+      #最大值
+      maxActive: 20
+      #最大等待时间，配置获取连接等待超时，时间单位都是毫秒ms
+      maxWait: 6000
+      #配置间隔多久才进行一次检测，检测需要关闭的空闲连接
+      timeBetweenEvictionRunsMillis: 60000
+      #配置一个连接在池中最小生存的时间
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: true
+      testOnReturn: true
+      poolPreparedStatements: true
+#Mybatis
+mybatis:
+  mapper-locations: classpath*:com/neuedu/mapper/*Mapper.xml
+  config-location: classpath:mybatis-config.xml
