--- a/cart-dev.yml
+++ b/cart-dev.yml
@@ -4,8 +4,8 @@ spring:
   rabbitmq:
     host: 182.92.82.190
     port: 5672
-    username: root
-    password: EMXT5201314WTXS!
+    username: WeszTx
+    password: EMXT5201314+
   #数据库相关配置
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
